--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/index.css">
 
   <header>
-    <div class="container">
+    <div class="container about-page">
       <nav>
         <img class="logo" src="img/lambda-black.png" alt=Lambda Logo>
         <a href="">Home</a>
@@ -37,56 +37,62 @@
       view of disruptive innovation via workplace diversity and empowerment.
     </div>
 
-    <div>
-      <img src="img/about-plan.png" alt="strategy">
-      <h2>
-        Strategy
-      </h2>
+    <section class="about-middle-section">
+      <div class="about-middle-content">
+        <img src="img/about-plan.png" alt="strategy">
+        <h2>
+          Strategy
+        </h2>
 
-      Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-      <h3>
-        Learn More
-      </h3>
-    </div>
-
-
-    <div>
-      <img src="img/about-working.png" alt="strategy">
-      <h2>
-        How We Work
-      </h2>
-
-      Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-      <h3>
-        Learn More
-      </h3>
-    </div>
+        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+        proposition.
+        <h3>
+          Learn More
+        </h3>
+      </div>
 
 
-    <div>
-      <img src="img/about-office.png" alt="strategy">
-      <h2>
-        Places We Work
-      </h2>
+      <div class="about-middle-content">
+        <img src="img/about-working.png" alt="strategy">
+        <h2>
+          How We Work
+        </h2>
 
-      Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+        proposition.
+        <h3>
+          Learn More
+        </h3>
+      </div>
 
-      <h3>
-        Learn More
-      </h3>
-    </div>
 
-    <div>
-      <img src="img/about-meeting.png" alt="strategy">
-      <h2>
-        Collaboration
-      </h2>
+      <div class="about-middle-content">
+        <img src="img/about-office.png" alt="strategy">
+        <h2>
+          Places We Work
+        </h2>
 
-      Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-      <h3>
-        Learn More
-      </h3>
-    </div>
+        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+        proposition.
+
+        <h3>
+          Learn More
+        </h3>
+      </div>
+
+      <div class="about-middle-content">
+        <img src="img/about-meeting.png" alt="strategy">
+        <h2>
+          Collaboration
+        </h2>
+
+        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+        proposition.
+        <h3>
+          Learn More
+        </h3>
+      </div>
+    </section>
 
     <div>
       <h2>
