--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
 <body>
   <div class="container about-page">
-    <div>
+    <div class="about-content">
       <h2>
         About
       </h2>
@@ -94,7 +94,7 @@
       </div>
     </section>
 
-    <div>
+    <div class="about-content">
       <h2>
         Let's Work Together
       </h2>
@@ -105,7 +105,7 @@
       view of disruptive innovation via workplace diversity and empowerment.
     </div>
 
-    <footer>
+    <footer class="about-footer">
       <nav>
         <a href="index.html">Home</a>
         <a href="#">About</a>
